--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-blue-500">
     <!-- Home Screen -->
     <div class="bg-blue-500 w-[500px] h-[500px]">
-        <div class="relative inline-block text-left">
-            <button class="bg-blue-500 text-white px-4 py-2 rounded-md">
-                Choose your language
-            </button>
-            <div class="absolute hidden mt-2 w-48 bg-white rounded-md shadow-lg group-hover:block">
-                <a href="#" class="block px-4 py-2 hover:bg-gray-100">Option 1</a>
-                <a href="#" class="block px-4 py-2 hover:bg-gray-100">Option 2</a>
-                <a href="#" class="block px-4 py-2 hover:bg-gray-100">Option 3</a>
-            </div>
+        <div class="max-w-sm mx-auto bg-white p-6 rounded-lg shadow-lg">
+            <label for="fruits" class="block text-gray-700 font-semibold mb-2">Choose you language :</label>
+            <select id="fruits" name="fruits" class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none">
+                <option value="french">French</option>
+                <option value="german">German</option>
+                <option value="english">English</option>
+                
+            </select>
         </div>
         
     </div>
